# cef-template

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: linux.yml  macos.yml  windows.yml
cmake/: DownloadCEF.cmake
src/: app.cc  app.h  handler.cc  handler.h  mac_helper.cc  main_linux.cc  main_mac.mm  main_win.cc
